# weevibin

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.svelte  main.ts  styles.css  vars.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: average.rs  lib.rs  main.rs  state.rs  websocket.rs
src/lib/: Greet.svelte  IconButton.svelte  Layout.svelte  MiscDetails.svelte  Playhead.svelte  TrackInfo.svelte  TransportControls.svelte  VolumeControls.svelte  consts.ts  persisted_state.ts  state.ts  utils.ts  vibinApi.ts  vibin_api.ts  vibin_types.ts
src/lib/components/: Arc.svelte  AudioFormat.svelte  AudioSource.svelte  Badge.svelte  MiscDetails.svelte  Playhead.svelte  Standby.svelte  Status.svelte  StatusLine.svelte  TrackInfo.svelte  TransportControls.svelte  VolumeControls.svelte  WebSocketConnectionStatus.svelte
src/lib/components/buttons/: IconButton.svelte  PowerButton.svelte  SettingsButton.svelte  ToggleButton.svelte
src/lib/screens/: Main.svelte  Settings.svelte
