[package]
name = "weevibin"
version = "1.0.0"
description = "A System Tray application for Vibin"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
log = "0.4.20"
futures = { version = "0.3.28", features = [] }
futures-util = "0.3.28"
tauri = { version = "1.5", features = ["shell-open", "system-tray", "http-all", "macos-private-api"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["colored"] }
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3.30"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = "0.20.1"
tungstenite = "0.20.1"
url = "2.4.1"
window-vibrancy = "0.4.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
